--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -154,11 +154,18 @@ a.brand {
   flex: 2 1 50rem
 }
 
+.mins-30{
+  min-width: 30rem;
+}
+
 /* image */
 img {
   border-radius: 0.5rem;
 }
-
+img.small{
+  max-width: 5rem;
+  width: 100%;
+}
 img.medium {
   max-width: 29rem;
   width: 100%;
