--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,7 @@ html {
   box-sizing: border-box;
 }
 
-body{
+body {
   margin: 0;
   height: 100vh;
   font-size: 1.6rem;
@@ -12,17 +12,17 @@ body{
   -moz-osx-font-smoothing: grayscale;
 }
 
-#root{
+#root {
   height: 100%;
 }
 
 /* Layout */
 .grid-container {
   display: grid;
-  grid-template-areas: 
-      'header'
-      'main'
-      'footer';
+  grid-template-areas:
+    "header"
+    "main"
+    "footer";
   grid-template-columns: 1fr;
   grid-template-rows: 5rem 1fr 5rem;
   height: 100%;
@@ -56,7 +56,6 @@ h2 {
   padding: 1rem 0;
 }
 
-
 a {
   text-decoration: none;
 }
@@ -77,7 +76,7 @@ li {
 
 input,
 select,
-textarea, 
+textarea,
 button {
   padding: 1rem;
   border-radius: 0.5rem;
@@ -86,17 +85,16 @@ button {
   font-family: Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
 }
 
 button {
   background-color: #f8f8f8;
-   cursor: pointer;
+  cursor: pointer;
 }
 
 input:hover,
 select:hover,
-textarea:hover, 
+textarea:hover,
 button:hover {
   border: 0.1rem #404040 solid;
 }
@@ -111,7 +109,7 @@ button.block {
 
 /* header */
 
-header a{
+header a {
   color: white;
   padding: 1rem;
 }
@@ -147,14 +145,14 @@ a.brand {
 }
 
 .col-1 {
-  flex: 1 1 25rem
+  flex: 1 1 25rem;
 }
 
 .col-2 {
-  flex: 2 1 50rem
+  flex: 2 1 50rem;
 }
 
-.mins-30{
+.mins-30 {
   min-width: 30rem;
 }
 
@@ -162,7 +160,7 @@ a.brand {
 img {
   border-radius: 0.5rem;
 }
-img.small{
+img.small {
   max-width: 5rem;
   width: 100%;
 }
@@ -224,4 +222,19 @@ img.large {
 .alert-danger {
   color: #a02020;
   background-color: #ffe0e0e0;
+}
+
+/* Form */
+.form {
+  max-width: 60rem;
+  margin: 0 auto;
+}
+.form > div {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem;
+}
+.form label {
+  margin: 1rem 0;
+  display: block;
 }
